// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup should render with both elements 1`] = `
<DocumentFragment>
  <div
    class="sc-jSgupP hQfTbO max-w-xs"
  >
    <div
      class="sc-dlfnbm sc-hKgILt hugYTt cehyyp"
    >
      <span
        data-testid="start"
      >
        $
      </span>
    </div>
    <div
      class="sc-dlfnbm sc-eCssSg hugYTt bXzrNx"
    >
      <span
        data-testid="end"
      >
        $
      </span>
    </div>
    <input
      class="sc-bdfBwQ fPlpOa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup should render with element on the left 1`] = `
<DocumentFragment>
  <div
    class="sc-jSgupP hQfTbO max-w-xs"
  >
    <div
      class="sc-dlfnbm sc-hKgILt hugYTt cehyyp"
    >
      <span
        data-testid="start"
      >
        $
      </span>
    </div>
    <input
      class="sc-bdfBwQ fPlpOa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup should render with element on the right 1`] = `
<DocumentFragment>
  <div
    class="sc-jSgupP hQfTbO max-w-xs"
  >
    <div
      class="sc-dlfnbm sc-eCssSg hugYTt bXzrNx"
    >
      <span
        data-testid="end"
      >
        $
      </span>
    </div>
    <input
      class="sc-bdfBwQ fPlpOa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;
